Fix jumping filter bar

--- a/src/app/rom-list/filter-bar/filter-bar.component.scss
+++ b/src/app/rom-list/filter-bar/filter-bar.component.scss
@@ -1,5 +1,9 @@
 $breakpoint-show-version-filter: 640px;
 
+:host {
+    display: block;
+}
+
 mat-toolbar {
     font-size: .8rem;
     display: flex;
